crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctypea_z.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPEa Z\"####)"
---
[
    Token {
        data: "DOCTYPEa Z",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
